# ifunc

./: Cargo.toml
ifunc-attribute/: Cargo.toml
ifunc-attribute/src/: lib.rs
src/: lib.rs
