[package]
name = "ifunc-attribute"
version.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
proc_macro-deterministic-rand = { git = "https://github.com/chorman0773/proc_macro-deterministic-rand" }

[lib]
proc-macro = true
